style(UI): scss linted with stylelint

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -31,11 +31,14 @@ input[type="number"] {
 }
 
 .mobileOnly {
+
   @media screen and (min-width: $mobile) {
     display: none !important;
   }
 }
+
 .desktopOnly {
+
   @media screen and (max-width: $mobile+1) {
     display: none !important;
   }
@@ -54,6 +57,7 @@ input[type="number"] {
 }
 
 .desktopOnly {
+
   @media screen and (max-width: $mobile) {
     display: none;
   }
@@ -81,7 +85,7 @@ body.inkline {
     .button {
       &.-link {
         &:hover {
-          background-color: transparentize($color: $gray, $amount: 0.8) !important;
+          background-color: transparentize($color: $gray, $amount: .8) !important;
         }
       }
     }
@@ -120,7 +124,7 @@ button.-lg.-circle {
   border: none !important;
   border-radius: 10px !important;
   box-shadow: $popoverShadow;
-  opacity: 0.975;
+  opacity: .975;
 
   &.-dark {
     background-color: $darkViolet !important;
@@ -299,7 +303,7 @@ button.-lg.-circle {
       transition: background-color $transition1;
 
       &:hover {
-        background-color: transparentize($color: $gray, $amount: 0.8);
+        background-color: transparentize($color: $gray, $amount: .8);
       }
 
       i {
@@ -348,7 +352,7 @@ button.-lg.-circle {
       background-color: transparent !important;
 
       &:hover {
-        background-color: rgba(0, 0, 0, 0.01961) !important;
+        background-color: rgba(0, 0, 0, .01961) !important;
       }
     }
   }
@@ -378,6 +382,7 @@ button.-lg.-circle {
 .form-group {
   &.-radio {
     margin: 15px 0;
+
     /* display: flex;
     flex-direction: column;
 
