--- a/src/assets/style/components/_amountInput.scss
+++ b/src/assets/style/components/_amountInput.scss
@@ -1,6 +1,7 @@
 .amountInput {
   transition: box-shadow $transition1;
   will-change: box-shadow;
+
   &.allowance {
     .minAmount {
       min-height: 24px;
@@ -8,11 +9,11 @@
   }
 
   input {
-    border-radius: 0.3rem 0 0 0.3rem !important;
+    border-radius: .3rem 0 0 .3rem !important;
   }
 
   button {
-    border-radius: 0 0.3rem 0.3rem 0 !important;
+    border-radius: 0 .3rem .3rem 0 !important;
   }
 
   &.error .form-input-group input {
