--- a/src/assets/style/pages/_transaction.scss
+++ b/src/assets/style/pages/_transaction.scss
@@ -56,7 +56,7 @@
       transition: background-color $transition1;
 
       &:hover {
-        background-color: transparentize($color: $gray, $amount: 0.9);
+        background-color: transparentize($color: $gray, $amount: .9);
       }
 
       .tokenSymbol {
