--- a/src/assets/style/blocks/_footer.scss
+++ b/src/assets/style/blocks/_footer.scss
@@ -87,7 +87,7 @@ footer {
       height: 2.5rem !important;
       padding: 0;
       border-radius: 100%;
-      box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.08), 0px 6px 10px 0px rgba(0, 0, 0, 0.1), 0px 1px 18px 0px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .08), 0 6px 10px 0 rgba(0, 0, 0, .1), 0 1px 18px 0 rgba(0, 0, 0, .1);
 
       @media (min-width: $mobile) {
         bottom: 80px;
