--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -4,6 +4,7 @@
 
   .routerContainer {
     min-height: $minRouteHeightMain;
+
     /* @media (max-width: $mobile) {
       min-height: $minRouteHeight !important;
     } */
@@ -18,7 +19,7 @@
     margin-left: auto;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 4px 4px 8px 0 rgba(11, 52, 102, 0.02);
+    box-shadow: 4px 4px 8px 0 rgba(11, 52, 102, .02);
     transition: background-color $transition1;
 
     .tileHeadline {
@@ -63,15 +64,15 @@
         margin-left: 10px;
         font-size: 11px;
         line-height: 26px;
-        background: transparentize($color: $gray, $amount: 0.7);
+        background: transparentize($color: $gray, $amount: .7);
         border-radius: 50%;
         transform: translateY(1px);
         cursor: pointer;
-        opacity: 0.9;
+        opacity: .9;
         transition: background-color $transition1;
 
         &:hover {
-          background: transparentize($color: $gray, $amount: 0.5);
+          background: transparentize($color: $gray, $amount: .5);
         }
       }
 
@@ -107,6 +108,7 @@
   }
 
   footer {
+
     @media (max-width: $mobile) {
       margin-bottom: 80px; /* Navigation bar space */
 
@@ -115,6 +117,7 @@
       }
     }
   }
+
   .headerSpace {
     width: 100%;
     height: $headerHeight;
@@ -161,18 +164,19 @@ body.inkline.-dark {
 .form-input-group.-light .form-input input,
 input.form-input.-prefixed {
   background-color: #0000000a !important;
-  border-radius: 0.3rem !important;
-  box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.035) !important;
+  border-radius: .3rem !important;
+  box-shadow: inset 1px 1px 3px rgba(0, 0, 0, .035) !important;
 }
 
 .form-input-group.-light .form-input input:focus,
 input.form-input.-prefixed:focus {
-  border-color: rgba(30, 30, 30, 0.15) !important;
+  border-color: rgba(30, 30, 30, .15) !important;
 }
 
 .tooltip-wrapper {
   display: flex;
 }
+
 i.iconInfo,
 em.iconInfo {
   display: block;
@@ -182,14 +186,14 @@ em.iconInfo {
   font-size: 11px;
   line-height: 26px;
   text-align: center;
-  background: transparentize($color: $gray, $amount: 0.7);
+  background: transparentize($color: $gray, $amount: .7);
   border-radius: 50%;
   transform: translateY(1px);
   cursor: pointer;
-  opacity: 0.9;
+  opacity: .9;
   transition: background-color $transition1;
 
   &:hover {
-    background: transparentize($color: $gray, $amount: 0.5);
+    background: transparentize($color: $gray, $amount: .5);
   }
 }
