--- a/src/assets/style/vars/_transitions.scss
+++ b/src/assets/style/vars/_transitions.scss
@@ -1,6 +1,6 @@
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity 0.5s ease;
+  transition: opacity .5s ease;
 }
 
 .fade-enter,
@@ -10,7 +10,7 @@
 
 .fadeFast-enter-active,
 .fadeFast-leave-active {
-  transition: 0.2s ease;
+  transition: .2s ease;
 }
 
 .fadeFast-enter,
