Transactions fixes + wallet connect container fix

--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -191,3 +191,9 @@
     }
   }
 }
+
+#walletconnect-wrapper .walletconnect-modal__base {
+  @media (max-height: 700px) {
+    max-width: 300px;
+  }
+}
