feature(Interface): huge update/refactoring of the UI/UX
* scss refactored (variables exploded, paddings/shadows/margins unified)
* icons updated, vertical aligment fixed
* vertical scroll fixed for the mobile / desktop / tablet
* finally fixed onboard popup
* web3-support check added to onboarding
* Version changed to v.2.*.*:23343 (published version + GIT short hash)
* util.ts refactored
* “change fee token” and fee composed into a single line
* “choose token” updated with the icon for the unification
* transactions store “for“ cycle replaced with the foreach
* refactored modal to edit/add contacts
* removed “made with zkSync”
* background shape of zkSync removed
* account vuex refactored
* packages upgraded to the latest versions
* nuxt.config.ts optimized (sentry configured / GTM configured)
* updated local run of ```yarn dev```
* SEO / OGG meta / title updated
* tsconfig.json aligned with the examples of typed-vuex
* gitignore updated
* top menu colors fixed
* mobile dashboard icons fixed
* placement of dark/light mode switcher fixed
* “Transactions“ menu link renamed to “History”
* all calls of the method “reconnect” dropped from any store
* metamask removed from the list when using safari/unsupported browser
* README.md updated
* colors checked and unified
* couple of transitions added

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -65,7 +65,7 @@ body.inkline {
       padding: 7px 12px;
       color: $lightViolet !important;
       text-decoration: none !important;
-      border-radius: 4px;
+      border-radius: $borderRadiusSm;
     }
   }
 
@@ -118,7 +118,7 @@ button.-lg.-circle {
 
 .popover {
   border: none !important;
-  border-radius: 10px !important;
+  border-radius: $borderRadius !important;
   box-shadow: $popoverShadow;
   opacity: 0.975;
 
@@ -206,7 +206,7 @@ button.-lg.-circle {
     > .header {
       font-weight: 400;
       font-size: 1.5rem;
-      font-family: $firaSansExtra;
+      font-family: $firaSans;
 
       & > .close {
         width: 2.2rem !important;
@@ -246,7 +246,7 @@ button.-lg.-circle {
     }
 
     & > div:last-child {
-      border-radius: 0 0 8px 8px;
+      border-radius: 0 0 $borderRadius $borderRadius;
     }
   }
 
@@ -308,7 +308,7 @@ button.-lg.-circle {
       }
 
       span {
-        font-size: 14px;
+        font-size: $fontSizeRegular;
         text-align: left;
       }
     }
@@ -345,10 +345,8 @@ button.-lg.-circle {
     }
 
     .form-input-append {
-      background-color: transparent !important;
-
       &:hover {
-        background-color: rgba(0, 0, 0, 0.01961) !important;
+        background-color: $shadowColor3 !important;
       }
     }
   }
@@ -366,7 +364,11 @@ button.-lg.-circle {
     }
 
     .form-input-append {
-      background-color: transparent !important;
+      background-color: $mediumViolet !important;
+      &:hover {
+        background-color: $darkMain !important;
+        color: $light;
+      }
     }
   }
 
