--- a/src/assets/style/blocks/_footer.scss
+++ b/src/assets/style/blocks/_footer.scss
@@ -1,3 +1,4 @@
+$colorLightGray: #e9ecef;
 footer {
   img {
     -webkit-user-select: none;
@@ -13,7 +14,7 @@ footer {
   @media screen and (min-width: 1201px) {
     .container {
       width: calc(100vw - 34px);
-      max-width: 1920px;
+      max-width: $biggestWidth;
     }
   }
 
@@ -21,11 +22,10 @@ footer {
     width: 100%;
 
     .row {
-      font-size: 14px !important;
+      font-size: $fontSizeRegular !important;
     }
 
     & > div {
-
       @media (max-width: $mobile) {
         flex-direction: column-reverse !important;
       }
@@ -33,10 +33,10 @@ footer {
   }
 
   a {
-    font-size: 14px;
+    font-size: $fontSizeRegular;
 
     @media (max-width: $mobile) {
-      font-size: 14px;
+      font-size: $fontSizeRegular;
     }
 
     &:hover {
@@ -53,27 +53,6 @@ footer {
     height: auto;
   }
 
-  .poweredBy {
-    display: flex;
-    align-items: center;
-    color: $violet;
-    text-transform: uppercase;
-    text-decoration: none;
-
-    .headerWrapper {
-      width: max-content;
-      margin: 0 10px;
-      padding: 0 !important;
-
-      .projectLogo {
-        width: 127px !important;
-        height: 30px;
-        margin: 0 !important;
-        transform: translateY(-2px);
-      }
-    }
-  }
-
   .floating-on-mobile {
     transform: translateY(-5px);
   }
@@ -81,16 +60,19 @@ footer {
   @media (max-width: 992px) {
     .floating-on-mobile {
       position: fixed;
-      right: 8vw;
-      bottom: 4vh;
       width: 2.5rem !important;
       height: 2.5rem !important;
       padding: 0;
       border-radius: 100%;
-      box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.08), 0px 6px 10px 0px rgba(0, 0, 0, 0.1), 0px 1px 18px 0px rgba(0, 0, 0, 0.1);
-
-      @media (min-width: $mobile) {
-        bottom: 80px;
+      right: 3rem;
+      bottom: 5rem;
+      box-shadow: $tileShadow;
+      &:hover {
+        box-shadow: $hoverShadow;
+      }
+      @media (max-width: $mobile) {
+        right: 8vw;
+        bottom: 6rem;
       }
     }
   }
@@ -100,7 +82,7 @@ footer {
   footer {
     a {
       color: $violet !important;
-      font-size: 14px;
+      font-size: $fontSizeRegular;
 
       &:hover {
         color: $lightViolet !important;
@@ -137,6 +119,6 @@ footer {
 .inkline.-dark {
   footer > .container .badge {
     color: $darkerGray;
-    background: #e9ecef;
+    background: $colorLightGray;
   }
 }
