--- a/src/assets/style/blocks/_chooseToken.scss
+++ b/src/assets/style/blocks/_chooseToken.scss
@@ -22,13 +22,13 @@
     }
 
     &::-webkit-scrollbar-thumb {
-      border-radius: 10px;
+      border-radius: $borderRadius;
       cursor: pointer;
     }
 
     &::-webkit-scrollbar-track {
       background-color: $tempTransparent;
-      border-radius: 10px;
+      border-radius: $borderRadius;
     }
 
     .tokenItem {
