--- a/src/assets/style/blocks/_indexHeader.scss
+++ b/src/assets/style/blocks/_indexHeader.scss
@@ -2,7 +2,7 @@ body {
   .indexHeader {
     z-index: 9;
     width: 100%;
-    height: 84px;
+    height: $headerHeight;
     background: rgba(24, 24, 32, 0.01) -moz-linear-gradient(top, rgba(24, 24, 32, 0.9), rgba(24, 24, 32, 0.7));
     box-shadow: 1px 1px 5px 10px rgba(0, 0, 0, 0.01);
 
@@ -51,13 +51,13 @@ body {
 
       @media screen and (min-width: $mobile+1) and (max-width: 991px) {
         padding: 0 5px;
-        font-size: 14px;
+        font-size: $fontSizeRegular;
       }
 
       & > .menu[data-popper-placement="bottom"] {
         min-width: 150px;
         padding: 0;
-        background: $darkViolet;
+        background: $mediumViolet;
         border-color: $darkViolet;
         border-radius: $borderRadius;
 
@@ -76,7 +76,7 @@ body {
 
           &:hover {
             color: $lightViolet;
-            background-color: lighten($darkViolet, 10) !important;
+            background-color: lighten($darkViolet, 5) !important;
             transition: color, background-color $transition1 !important;
             will-change: color, backgroud;
           }
@@ -183,7 +183,7 @@ body {
         .mainIndexHeader {
           height: auto;
           min-height: 220px;
-          transform: translateY(80px);
+          transform: translateY($headerHeight);
         }
       }
 
@@ -300,6 +300,7 @@ body {
             }
 
             & > .menu[data-popper-placement="bottom"] {
+              background-color: $bgSecondary;
               position: initial !important;
               width: 100% !important;
 
