--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -1,5 +1,5 @@
 .bn-onboard-modal {
-  z-index: 11;
+  z-index: 10;
 
   .bn-onboard-custom.bn-onboard-modal-content {
     width: 100%;
@@ -9,9 +9,6 @@
     color: $lightViolet !important;
     font-weight: bold;
     font-size: 16px;
-    @media screen and (max-width: $mobile) {
-      margin-top: 0.35em;
-    }
   }
 
   a,
@@ -20,13 +17,13 @@
     font: normal 16px $firaSans !important;
     letter-spacing: -0.01rem !important;
     text-decoration: none !important;
+
     &:hover {
       color: $violet !important;
     }
   }
 
   @media screen and (min-width: $mobile) {
-    b//background-color: transparent !important;
     .bn-onboard-modal-content {
       width: 85%;
     }
@@ -37,12 +34,38 @@
     font-family: $firaSans;
 
     @media (max-width: $mobile) {
-      height: 100vh !important;
+      height: calc(100vh - 1rem) !important;
       max-height: 100vh !important;
       border-radius: 0 !important;
+      flex-flow: column;
+      display: flex;
+      justify-content: space-between;
+      padding-bottom: 1rem !important;
+      header.bn-onboard-modal-content-header {
+        margin: 1rem 0 0.25rem;
+      }
 
-      .bn-onboard-modal-content-header {
-        margin: 1rem 0 !important;
+      .bn-onboard-select-info-container {
+        margin: 0.25rem 0 !important;
+        padding: 0.75rem 0 0.25rem !important;
+        display: flex;
+        align-items: center;
+
+        span.bn-onboard-select-wallet-info {
+          margin-top: 0 !important;
+        }
+      }
+      p.bn-onboard-select-description {
+        padding: 0 0 1rem;
+        border-bottom: 0.5px solid $lightViolet;
+        margin: 0 0 0.5rem;
+        display: block;
+      }
+      p.bn-onboard-select-wallet-definition {
+        display: block;
+        margin: 0;
+        padding: 0 0 0.25rem;
+        transition: all $transition2;
       }
     }
   }
@@ -135,28 +158,16 @@
       margin: 0.25rem 0;
       padding: 0.5rem;
     }
-    .bn-onboard-select-wallet-definition {
-      margin-top: .8em !important;
-    }
     .bn-onboard-modal-content {
-      padding-bottom: 0;
-
       header.bn-onboard-custom.bn-onboard-modal-content-header {
-        margin: 1rem 0 !important;
-
         h3 {
           margin: 0 !important;
         }
       }
 
-      .bn-onboard-custom.bn-onboard-select-description {
-        margin: 0 0 0.5rem;
-        padding: 0 0 0.5rem;
-      }
-
       ul.bn-onboard-custom.bn-onboard-modal-select-wallets {
         height: 100%;
-        max-height: calc(100% - 285px - 2rem) !important;
+        max-height: calc(100% - 150px - 1.5rem) !important;
         margin: 0;
         padding: 0;
       }
@@ -189,11 +200,5 @@
     .bn-onboard-selected-wallet {
       background-color: $accentBg !important;
     }
-  }
-}
-
-#walletconnect-wrapper .walletconnect-modal__base {
-  @media (max-height: 700px) {
-    max-width: 300px;
   }
 }
