--- a/src/assets/style/components/_amountInput.scss
+++ b/src/assets/style/components/_amountInput.scss
@@ -8,11 +8,11 @@
   }
 
   input {
-    border-radius: 0.3rem 0 0 0.3rem !important;
+    border-radius: $borderRadiusSm 0 0 $borderRadiusSm !important;
   }
 
   button {
-    border-radius: 0 0.3rem 0.3rem 0 !important;
+    border-radius: 0 $borderRadiusSm $borderRadiusSm 0 !important;
   }
 
   &.error .form-input-group input {
@@ -25,6 +25,6 @@
     padding-top: 5px;
     color: $red;
     font-size: 12px;
-    line-height: 14px;
+    line-height: $fontSizeRegular;
   }
 }
