--- a/src/assets/style/components/custom/_alert.scss
+++ b/src/assets/style/components/custom/_alert.scss
@@ -9,7 +9,7 @@
   padding: 15px 20px;
   background-color: $lighterGray;
   border: 1px solid $tempLightGray;
-  border-radius: 5px;
+  border-radius: $borderRadiusMd;
 
   .alertIcon {
     color: $darkerGray;
