--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -3,7 +3,7 @@
   height: 100%;
 
   .routerContainer {
-    min-height: $minRouteHeightMain;
+    min-height: $minRouteHeightWithExtra;
     /* @media (max-width: $mobile) {
       min-height: $minRouteHeight !important;
     } */
@@ -13,11 +13,11 @@
     width: 90%;
     max-width: 505px;
     height: auto;
-    margin-top: 15px;
+    margin-top: 35px;
     margin-right: auto;
     margin-left: auto;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: $borderRadius;
     box-shadow: 4px 4px 8px 0 rgba(11, 52, 102, 0.02);
     transition: background-color $transition1;
 
@@ -102,16 +102,16 @@
       font-size: 15px;
       text-align: center;
       border: 1px solid;
-      border-radius: 5px;
+      border-radius: $borderRadiusMd;
     }
   }
 
   footer {
     @media (max-width: $mobile) {
-      margin-bottom: 80px; /* Navigation bar space */
+      margin-bottom: $footerHeight; /* Navigation bar space */
 
       .floating-on-mobile {
-        bottom: calc(4vh + 70px);
+        bottom: calc(4vh + 80px);
       }
     }
   }
@@ -160,8 +160,8 @@ body.inkline.-dark {
 
 .form-input-group.-light .form-input input,
 input.form-input.-prefixed {
-  background-color: #0000000a !important;
-  border-radius: 0.3rem !important;
+  background-color: $input-border-color-light !important;
+  border-radius: $borderRadiusSm;
   box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.035) !important;
 }
 
