--- a/src/assets/style/pages/_contacts.scss
+++ b/src/assets/style/pages/_contacts.scss
@@ -18,7 +18,7 @@
 .contactTile {
   display: flex;
   flex-direction: column;
-  height: $minRouteHeightMain !important;
+  height: $minRouteHeightWithExtra !important;
   min-height: 300px;
 }
 
@@ -35,13 +35,13 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    border-radius: 10px;
+    border-radius: $borderRadius;
     cursor: pointer;
   }
 
   &::-webkit-scrollbar-track {
     background-color: $tempTransparent;
-    border-radius: 10px;
+    border-radius: $borderRadius;
   }
 
   .contactItem {
