refactor(onboarding&speedup): huge update, details later

--- a/src/assets/style/blocks/_indexHeader.scss
+++ b/src/assets/style/blocks/_indexHeader.scss
@@ -353,6 +353,7 @@ body {
 
 body.inkline.-light {
   .indexHeader {
+    background-color: $white;
     .mobileIndexHeader {
       background-color: $white;
 
