--- a/src/assets/style/pages/_index.scss
+++ b/src/assets/style/pages/_index.scss
@@ -27,10 +27,11 @@
     .container {
       justify-content: start;
       padding-top: 2rem;
+
       h1 {
         max-width: 350px;
         line-height: 35px;
-        margin-bottom: 0.25rem;
+        margin-bottom: .25rem;
       }
     }
   }
