--- a/src/assets/style/components/custom/_input.scss
+++ b/src/assets/style/components/custom/_input.scss
@@ -12,7 +12,7 @@
     background: $white;
     border-radius: $borderRadiusMd;
     box-shadow: $inputContainerShadow;
-    transition: background-color 0.2s ease;
+    transition: background-color .2s ease;
 
     .pre {
       display: flex;
@@ -48,7 +48,7 @@
       background-color: $tempTransparent;
       border: none;
       outline: none !important;
-      transition: color 0.2s ease;
+      transition: color .2s ease;
 
       &::placeholder {
         color: $gray;
@@ -65,7 +65,7 @@
       color: $violet;
       font-size: $fontSizeRegular;
       border-left: 2px solid $purple;
-      transition: color 0.2s ease, border-color 0.2s ease;
+      transition: color .2s ease, border-color .2s ease;
     }
   }
 
@@ -118,13 +118,14 @@
 
 .ri-loader-5-line {
   display: inline-block;
-  animation: spin 0.5s linear 0s infinite;
+  animation: spin .5s linear 0s infinite;
 }
 
 @keyframes spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
