--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -4,6 +4,7 @@
 
   .routerContainer {
     min-height: $minRouteHeightWithExtra;
+
     /* @media (max-width: $mobile) {
       min-height: $minRouteHeight !important;
     } */
@@ -18,7 +19,7 @@
     margin-left: auto;
     padding: 20px;
     border-radius: $borderRadius;
-    box-shadow: 4px 4px 8px 0 rgba(11, 52, 102, 0.02);
+    box-shadow: 4px 4px 8px 0 rgba(11, 52, 102, .02);
     transition: background-color $transition1;
 
     .tileHeadline {
@@ -63,15 +64,15 @@
         margin-left: 10px;
         font-size: 11px;
         line-height: 26px;
-        background: transparentize($color: $gray, $amount: 0.7);
+        background: transparentize($color: $gray, $amount: .7);
         border-radius: 50%;
         transform: translateY(1px);
         cursor: pointer;
-        opacity: 0.9;
+        opacity: .9;
         transition: background-color $transition1;
 
         &:hover {
-          background: transparentize($color: $gray, $amount: 0.5);
+          background: transparentize($color: $gray, $amount: .5);
         }
       }
 
@@ -96,16 +97,18 @@
       text-align: center;
     }
   }
+
   .tileTextBg {
     margin: 5px 0;
     padding: 12px 15px;
     font-size: 15px;
     text-align: center;
     border: 1px solid;
-      border-radius: $borderRadiusMd;
+    border-radius: $borderRadiusMd;
   }
 
   footer {
+
     @media (max-width: $mobile) {
       margin-bottom: $footerHeight; /* Navigation bar space */
 
@@ -114,6 +117,7 @@
       }
     }
   }
+
   .headerSpace {
     width: 100%;
     height: $headerHeight;
@@ -161,17 +165,18 @@ body.inkline.-dark {
 input.form-input.-prefixed {
   background-color: $input-border-color-light !important;
   border-radius: $borderRadiusSm;
-  box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.035) !important;
+  box-shadow: inset 1px 1px 3px rgba(0, 0, 0, .035) !important;
 }
 
 .form-input-group.-light .form-input input:focus,
 input.form-input.-prefixed:focus {
-  border-color: rgba(30, 30, 30, 0.15) !important;
+  border-color: rgba(30, 30, 30, .15) !important;
 }
 
 .tooltip-wrapper {
   display: flex;
 }
+
 i.iconInfo,
 em.iconInfo {
   display: block;
@@ -181,14 +186,14 @@ em.iconInfo {
   font-size: 11px;
   line-height: 26px;
   text-align: center;
-  background: transparentize($color: $gray, $amount: 0.7);
+  background: transparentize($color: $gray, $amount: .7);
   border-radius: 50%;
   transform: translateY(1px);
   cursor: pointer;
-  opacity: 0.9;
+  opacity: .9;
   transition: background-color $transition1;
 
   &:hover {
-    background: transparentize($color: $gray, $amount: 0.5);
+    background: transparentize($color: $gray, $amount: .5);
   }
 }
