--- a/src/assets/style/vars/_variables.scss
+++ b/src/assets/style/vars/_variables.scss
@@ -27,7 +27,7 @@ $tempTransparent: transparent;
 /* Bg */
 $accentBg: transparentize(
   $color: $gray,
-  $amount: 0.95,
+  $amount: .95,
 );
 $bgLight: #fbfbfb;
 $bgSecondary: #ffffff10;
@@ -36,11 +36,11 @@ $bgSecondary: #ffffff10;
 $input-prefix-border-width: 0;
 $input-border-width: 1px;
 $input-border-color-dark: #ffffff14;
-$input-border-color-focus-dark: #ffffff33;
+$input-border-color-focus-dark: #fff3;
 $input-background-dark: #ffffff05;
 $input-background-light: #00000005;
 $input-border-color-light: #0000000a;
-$input-border-color-focus-light: #00000033;
+$input-border-color-focus-light: #0003;
 
 /* Modal */
 $modal-border-radius: (
@@ -58,12 +58,12 @@ $firaCode: "Fira Code", "sans-serif";
 $font-family-primary-base: $firaSans;
 
 /* Transitions */
-$transition1: 0.2s ease;
-$transition2: 0.3s ease;
+$transition1: .2s ease;
+$transition2: .3s ease;
 
 /* Border-radius */
 $borderRadiusXs: 6.6px;
-$borderRadiusSm: 0.25rem;
+$borderRadiusSm: .25rem;
 $borderRadiusMd: 4px;
 $borderRadius: 8px;
 $borderRadiusBig: 16px;
@@ -99,5 +99,5 @@ $inputContainerShadow: 0 2px 4px $shadowColor4, 0 4px 6px $shadowColor4;
 $hoverShadow: 0 4px 8px $shadowColor8;
 $defaultShadow: 0 4px 4px $shadowColor8;
 $layerShadow: 0 1px 5px 0 $shadowColor10;
-$tileShadow: 0 1px 0.5px $shadowColor10;
-$modeShadow: 0 3px 5px -1px $shadowColor8, 0px 6px 10px 0px $shadowColor10, 0px 1px 18px 0px $shadowColor10;
+$tileShadow: 0 1px .5px $shadowColor10;
+$modeShadow: 0 3px 5px -1px $shadowColor8, 0 6px 10px 0 $shadowColor10, 0 1px 18px 0 $shadowColor10;
