--- a/src/assets/style/blocks/_indexHeader.scss
+++ b/src/assets/style/blocks/_indexHeader.scss
@@ -3,8 +3,8 @@ body {
     z-index: 9;
     width: 100%;
     height: 84px;
-    background: rgba(24, 24, 32, .01) -moz-linear-gradient(top, rgba(24, 24, 32, .9), rgba(24, 24, 32, .7));
-    box-shadow: 1px 1px 5px 10px rgba(0, 0, 0, .01);
+    background: rgba(24, 24, 32, 0.01) -moz-linear-gradient(top, rgba(24, 24, 32, 0.9), rgba(24, 24, 32, 0.7));
+    box-shadow: 1px 1px 5px 10px rgba(0, 0, 0, 0.01);
 
     .linksContainer {
       .linkItem {
