--- a/src/assets/style/pages/_account.scss
+++ b/src/assets/style/pages/_account.scss
@@ -61,7 +61,7 @@
           transition: background-color $transition1, color $transition1;
 
           &:hover {
-            background-color: transparentize($color: $gray, $amount: .9);
+            background-color: transparentize($color: $gray, $amount: 0.9);
           }
 
           .tokenSymbol {
