--- a/src/assets/style/components/_amountInput.scss
+++ b/src/assets/style/components/_amountInput.scss
@@ -9,11 +9,11 @@
   }
 
   input {
-    border-radius: .3rem 0 0 .3rem !important;
+    border-radius: 0.3rem 0 0 0.3rem !important;
   }
 
   button {
-    border-radius: 0 .3rem .3rem 0 !important;
+    border-radius: 0 0.3rem 0.3rem 0 !important;
   }
 
   &.error .form-input-group input {
