--- a/src/assets/style/components/_loader.scss
+++ b/src/assets/style/components/_loader.scss
@@ -2,8 +2,8 @@
   position: relative;
   font-size: 10px;
   text-indent: -9999em;
-  border: .5rem solid #f5f5f5;
-  border-left: .5rem solid #8c8dfc;
+  border: 0.5rem solid #f5f5f5;
+  border-left: 0.5rem solid #8c8dfc;
   transform: translateZ(0);
   animation: nuxtLoadingCustom 1.1s infinite linear;
 }
@@ -48,7 +48,7 @@
       }
 
       .loaderSpinner {
-        border-width: .2rem;
+        border-width: 0.2rem;
       }
     }
   }
@@ -57,7 +57,7 @@
     position: relative;
     font-size: 10px;
     text-indent: -9999em;
-    border: .5rem solid #f5f5f5;
+    border: 0.5rem solid #f5f5f5;
     border-left-color: #8c8dfc;
     transform: translateZ(0);
     animation: nuxtLoadingCustom 1.1s infinite linear;
