--- a/src/assets/style/components/_toaster.scss
+++ b/src/assets/style/components/_toaster.scss
@@ -2,7 +2,7 @@
   .toasted {
     &-primary {
       border-radius: 6px !important;
-      box-shadow: 0 0 3px 0 rgba(0, 0, 0, .12) !important;
+      box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.12) !important;
       transition: background-color $transition1, color $transition1;
 
       &.error {
