--- a/src/assets/style/blocks/_chooseToken.scss
+++ b/src/assets/style/blocks/_chooseToken.scss
@@ -8,6 +8,37 @@
     text-align: center;
   }
 
+  .searchContainer {
+    display: grid;
+    height: max-content;
+    grid-template-columns: 1fr max-content;
+    grid-template-rows: 100%;
+    grid-gap: 10px;
+
+    .updateBtn {
+      width: 2.8rem;
+      height: 2.8rem;
+      border-radius: 50%;
+      background-color: transparentize($color: $gray, $amount: 0.9);
+      transition: background-color $transition1;
+      cursor: pointer;
+      &:hover:not(.disabled) {
+        background-color: transparentize($color: $gray, $amount: 0.8);
+      }
+
+      .tooltip-wrapper {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        em, i {
+          font-size: 1.5rem;
+        }
+      }
+    }
+  }
   .tokenListContainer {
     height: 100%;
     max-height: 60vh;
@@ -84,6 +115,11 @@ body.inkline {
 
       .tokenItem {
         border-color: $input-border-color-light;
+      }
+    }
+    .searchContainer {
+      .updateBtn {
+
       }
     }
   }
